--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,4 +1,21 @@
 server {
+
+
+        if ($request_method !~ ^(GET)$ ) {
+                return 444;
+        }
+
+
+        server_tokens off;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA HIGH !RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS";
+
+        client_body_buffer_size 1K;
+        client_header_buffer_size 1k;
+        client_max_body_size 1k;
+        large_client_header_buffers 2 1k;
+
         listen 80 default_server;
         listen [::]:80 default_server;
 
