--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -5,6 +5,18 @@ server {
                 return 444;
         }
 
+        gzip on;
+        gzip_vary on;
+
+        gzip_proxied any;
+        gzip_comp_level 6;
+        gzip_buffers 16 8k;
+        gzip_http_version 1.0;
+        gzip_min_length 256;
+
+        gzip_types *;
+
+
 
         server_tokens off;
 
