--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "primeicons": "^6.0.1",
     "primereact": "^10.5.1",
     "prop-types": "^15.8.1",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
